[tool.poetry]
name = "sender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
circuitpython-nrf24l01 = "^2.1.3"
rpi-gpio = "^0.7.1"
spidev = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
